crates/tui/src/view/snapshots/tui__view__request__tests__one_question_text_input_typed.snap
---
source: crates/tui/src/view/request_tests.rs
expression: "screen(&text, 60, 12).0"
---





▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
  question · s_aaaaaaaaaaaaaaaa · 1 of 1
  What?
  › ✎ hi
    Submit
    Chat about this
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
